Implemented unit tests, updated dependency versions and adjusted the argument resolver accordingly (#4)
* Updated spring doc version

---------

Co-authored-by: Pavel Chervenyashki <pavel.chervenyashki@codexio.bg>
Co-authored-by: Ivan Yonkov <ivan.yonkov@codexio.bg>