@@ -5,7 +5,7 @@
 
     <groupId>bg.codexio.springframework.data.jpa.requery</groupId>
     <artifactId>requery-core</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Codexio Ltd. Unified Request to Query resolver</name>
@@ -41,13 +41,15 @@
         <spring.web.version>5.3.18</spring.web.version>
         <spring.orm.version>6.1.6</spring.orm.version>
         <spring.data.jpa.version>3.2.5</spring.data.jpa.version>
-        <spring.doc.version>1.8.0</spring.doc.version>
+        <spring.doc.version>2.5.0</spring.doc.version>
         <hibernate.core.version>6.4.1.Final</hibernate.core.version>
         <jackson.databing.version>2.16.0</jackson.databing.version>
         <jakarta.servlet.version>5.0.0</jakarta.servlet.version>
         <slf4j.version>2.0.13</slf4j.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
+        <junit.version>5.10.1</junit.version>
+        <mockito.version>5.8.0</mockito.version>
 
         <nexus.plugin.version>1.6.13</nexus.plugin.version>
         <gpg.plugin.version>3.1.0</gpg.plugin.version>
@@ -80,7 +82,7 @@
 
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${spring.doc.version}</version>
         </dependency>
 
@@ -109,6 +111,19 @@
             <version>${slf4j.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
@@ -124,6 +139,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
+                <configuration>
+                    <argLine>@{argLine} --enable-preview</argLine>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>${junit.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -132,12 +157,23 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <profiles>
+        <profile>
+            <id>local-build</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <argLine>--enable-preview</argLine>
+            </properties>
+        </profile>
+
         <profile>
             <id>mvn-deploy</id>
             <activation>
@@ -151,6 +187,14 @@
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <version>${jacoco.plugin.version}</version>
+                        <configuration>
+                            <excludes>
+                                <exclude>**/payload/*</exclude>
+                                <exclude>**/FieldInfo.class</exclude>
+                                <exclude>**/ExtendedMysqlDialect.class</exclude>
+                                <exclude>**/ExtendedPostgresqlDialect.class</exclude>
+                            </excludes>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>jacoco-initialize</id>
